tests/errors/pp-expr-float.h
// Floating point literals in preprocessor expressions
#if 1.0 == 2.0
